project/pwn_parser.output
   0  $accept : file $end

   1  file : decs

   2  decs : dec
   3       | decs dec

   4  dec : v_dec tEND
   5      | f_dec tEND
   6      | f_def

   7  v_dec : type tID '=' literal
   8        | type tID
   9        | '*' tID
  10        | '*' tID '=' tNOOB

  11  f_dec : type tID '(' ')'
  12        | type tID '(' vars ')'
  13        | tVOID tID '(' vars ')'
  14        | tVOID tID '(' ')'
  15        | '*' tID '(' vars ')'
  16        | '*' tID '(' ')'

  17  f_def : type tID '(' vars ')' body
  18        | tVOID tID '(' vars ')' body
  19        | '*' tID '(' vars ')' body
  20        | type tID '(' ')' body
  21        | tVOID tID '(' ')' body
  22        | '*' tID '(' ')' body

  23  f_call : tID '(' ')'
  24         | tID '(' arg_call ')'

  25  type : tINT
  26       | tSTRING

  27  arg_call : expr
  28           | arg_call ',' expr

  29  vars : type tID
  30       | vars ',' type tID

  31  body : '{' decs stmts '}'
  32       | '{' decs '}'
  33       | '{' stmts '}'
  34       | '{' '}'

  35  stmts : stmt
  36        | stmts stmt

  37  stmt : expr tEND
  38       | expr '!'
  39       | tSTOP tEND
  40       | tSTOP tINTEGER tEND
  41       | tNEXT tEND
  42       | tNEXT tINTEGER tEND
  43       | body
  44       | tIF '(' expr ')' stmt
  45       | tIF '(' expr ')' stmt tELSE stmt
  46       | tREPEAT '(' expr ',' expr ',' expr ')' stmt
  47       | tREPEAT '(' ',' expr ',' expr ')' stmt
  48       | tRETURN tEND

  49  expr : '+' expr
  50       | '-' expr
  51       | '~' expr
  52       | expr '+' expr
  53       | expr '-' expr
  54       | expr '*' expr
  55       | expr '/' expr
  56       | expr '%' expr
  57       | expr '<' expr
  58       | expr '>' expr
  59       | expr tGE expr
  60       | expr tLE expr
  61       | expr tNE expr
  62       | expr tEQ expr
  63       | expr '|' expr
  64       | expr '&' expr
  65       | lval '?'
  66       | lval
  67       | lval '=' expr
  68       | '(' expr ')'
  69       | literal
  70       | f_call

  71  literal : tINTEGER
  72          | tSTRING
  73          | tNOOB

  74  lval : tID
  75       | tID '[' expr ']'

state 0
	$accept : . file $end  (0)

	tSTRING  shift 1
	tVOID  shift 2
	tINT  shift 3
	'*'  shift 4
	.  error

	file  goto 5
	dec  goto 6
	v_dec  goto 7
	f_dec  goto 8
	f_def  goto 9
	decs  goto 10
	type  goto 11


state 1
	type : tSTRING .  (26)

	.  reduce 26


state 2
	f_dec : tVOID . tID '(' vars ')'  (13)
	f_dec : tVOID . tID '(' ')'  (14)
	f_def : tVOID . tID '(' vars ')' body  (18)
	f_def : tVOID . tID '(' ')' body  (21)

	tID  shift 12
	.  error


state 3
	type : tINT .  (25)

	.  reduce 25


state 4
	v_dec : '*' . tID  (9)
	v_dec : '*' . tID '=' tNOOB  (10)
	f_dec : '*' . tID '(' vars ')'  (15)
	f_dec : '*' . tID '(' ')'  (16)
	f_def : '*' . tID '(' vars ')' body  (19)
	f_def : '*' . tID '(' ')' body  (22)

	tID  shift 13
	.  error


state 5
	$accept : file . $end  (0)

	$end  accept


state 6
	decs : dec .  (2)

	.  reduce 2


state 7
	dec : v_dec . tEND  (4)

	tEND  shift 14
	.  error


state 8
	dec : f_dec . tEND  (5)

	tEND  shift 15
	.  error


state 9
	dec : f_def .  (6)

	.  reduce 6


state 10
	file : decs .  (1)
	decs : decs . dec  (3)

	tSTRING  shift 1
	tVOID  shift 2
	tINT  shift 3
	'*'  shift 4
	$end  reduce 1

	dec  goto 16
	v_dec  goto 7
	f_dec  goto 8
	f_def  goto 9
	type  goto 11


state 11
	v_dec : type . tID '=' literal  (7)
	v_dec : type . tID  (8)
	f_dec : type . tID '(' ')'  (11)
	f_dec : type . tID '(' vars ')'  (12)
	f_def : type . tID '(' vars ')' body  (17)
	f_def : type . tID '(' ')' body  (20)

	tID  shift 17
	.  error


state 12
	f_dec : tVOID tID . '(' vars ')'  (13)
	f_dec : tVOID tID . '(' ')'  (14)
	f_def : tVOID tID . '(' vars ')' body  (18)
	f_def : tVOID tID . '(' ')' body  (21)

	'('  shift 18
	.  error


state 13
	v_dec : '*' tID .  (9)
	v_dec : '*' tID . '=' tNOOB  (10)
	f_dec : '*' tID . '(' vars ')'  (15)
	f_dec : '*' tID . '(' ')'  (16)
	f_def : '*' tID . '(' vars ')' body  (19)
	f_def : '*' tID . '(' ')' body  (22)

	'('  shift 19
	'='  shift 20
	tEND  reduce 9


state 14
	dec : v_dec tEND .  (4)

	.  reduce 4


state 15
	dec : f_dec tEND .  (5)

	.  reduce 5


state 16
	decs : decs dec .  (3)

	.  reduce 3


state 17
	v_dec : type tID . '=' literal  (7)
	v_dec : type tID .  (8)
	f_dec : type tID . '(' ')'  (11)
	f_dec : type tID . '(' vars ')'  (12)
	f_def : type tID . '(' vars ')' body  (17)
	f_def : type tID . '(' ')' body  (20)

	'('  shift 21
	'='  shift 22
	tEND  reduce 8


state 18
	f_dec : tVOID tID '(' . vars ')'  (13)
	f_dec : tVOID tID '(' . ')'  (14)
	f_def : tVOID tID '(' . vars ')' body  (18)
	f_def : tVOID tID '(' . ')' body  (21)

	tSTRING  shift 1
	tINT  shift 3
	')'  shift 23
	.  error

	vars  goto 24
	type  goto 25


state 19
	f_dec : '*' tID '(' . vars ')'  (15)
	f_dec : '*' tID '(' . ')'  (16)
	f_def : '*' tID '(' . vars ')' body  (19)
	f_def : '*' tID '(' . ')' body  (22)

	tSTRING  shift 1
	tINT  shift 3
	')'  shift 26
	.  error

	vars  goto 27
	type  goto 25


state 20
	v_dec : '*' tID '=' . tNOOB  (10)

	tNOOB  shift 28
	.  error


state 21
	f_dec : type tID '(' . ')'  (11)
	f_dec : type tID '(' . vars ')'  (12)
	f_def : type tID '(' . vars ')' body  (17)
	f_def : type tID '(' . ')' body  (20)

	tSTRING  shift 1
	tINT  shift 3
	')'  shift 29
	.  error

	vars  goto 30
	type  goto 25


state 22
	v_dec : type tID '=' . literal  (7)

	tINTEGER  shift 31
	tSTRING  shift 32
	tNOOB  shift 33
	.  error

	literal  goto 34


state 23
	f_dec : tVOID tID '(' ')' .  (14)
	f_def : tVOID tID '(' ')' . body  (21)

	'{'  shift 35
	tEND  reduce 14

	body  goto 36


state 24
	f_dec : tVOID tID '(' vars . ')'  (13)
	f_def : tVOID tID '(' vars . ')' body  (18)
	vars : vars . ',' type tID  (30)

	')'  shift 37
	','  shift 38
	.  error


state 25
	vars : type . tID  (29)

	tID  shift 39
	.  error


state 26
	f_dec : '*' tID '(' ')' .  (16)
	f_def : '*' tID '(' ')' . body  (22)

	'{'  shift 35
	tEND  reduce 16

	body  goto 40


state 27
	f_dec : '*' tID '(' vars . ')'  (15)
	f_def : '*' tID '(' vars . ')' body  (19)
	vars : vars . ',' type tID  (30)

	')'  shift 41
	','  shift 38
	.  error


state 28
	v_dec : '*' tID '=' tNOOB .  (10)

	.  reduce 10


state 29
	f_dec : type tID '(' ')' .  (11)
	f_def : type tID '(' ')' . body  (20)

	'{'  shift 35
	tEND  reduce 11

	body  goto 42


state 30
	f_dec : type tID '(' vars . ')'  (12)
	f_def : type tID '(' vars . ')' body  (17)
	vars : vars . ',' type tID  (30)

	')'  shift 43
	','  shift 38
	.  error


state 31
	literal : tINTEGER .  (71)

	.  reduce 71


state 32
	literal : tSTRING .  (72)

	.  reduce 72


state 33
	literal : tNOOB .  (73)

	.  reduce 73


state 34
	v_dec : type tID '=' literal .  (7)

	.  reduce 7


state 35
	body : '{' . decs stmts '}'  (31)
	body : '{' . decs '}'  (32)
	body : '{' . stmts '}'  (33)
	body : '{' . '}'  (34)

	tINTEGER  shift 31
	tID  shift 44
	tSTRING  shift 45
	tREPEAT  shift 46
	tIF  shift 47
	tNEXT  shift 48
	tSTOP  shift 49
	tRETURN  shift 50
	tNOOB  shift 33
	tVOID  shift 2
	tINT  shift 3
	'('  shift 51
	'~'  shift 52
	'{'  shift 35
	'+'  shift 53
	'-'  shift 54
	'*'  shift 4
	'}'  shift 55
	.  error

	stmt  goto 56
	dec  goto 6
	v_dec  goto 7
	f_dec  goto 8
	f_def  goto 9
	decs  goto 57
	stmts  goto 58
	expr  goto 59
	literal  goto 60
	f_call  goto 61
	lval  goto 62
	body  goto 63
	type  goto 11


state 36
	f_def : tVOID tID '(' ')' body .  (21)

	.  reduce 21


state 37
	f_dec : tVOID tID '(' vars ')' .  (13)
	f_def : tVOID tID '(' vars ')' . body  (18)

	'{'  shift 35
	tEND  reduce 13

	body  goto 64


state 38
	vars : vars ',' . type tID  (30)

	tSTRING  shift 1
	tINT  shift 3
	.  error

	type  goto 65


state 39
	vars : type tID .  (29)

	.  reduce 29


state 40
	f_def : '*' tID '(' ')' body .  (22)

	.  reduce 22


state 41
	f_dec : '*' tID '(' vars ')' .  (15)
	f_def : '*' tID '(' vars ')' . body  (19)

	'{'  shift 35
	tEND  reduce 15

	body  goto 66


state 42
	f_def : type tID '(' ')' body .  (20)

	.  reduce 20


state 43
	f_dec : type tID '(' vars ')' .  (12)
	f_def : type tID '(' vars ')' . body  (17)

	'{'  shift 35
	tEND  reduce 12

	body  goto 67


state 44
	f_call : tID . '(' ')'  (23)
	f_call : tID . '(' arg_call ')'  (24)
	lval : tID .  (74)
	lval : tID . '[' expr ']'  (75)

	'('  shift 68
	'['  shift 69
	tEND  reduce 74
	')'  reduce 74
	']'  reduce 74
	'='  reduce 74
	'|'  reduce 74
	'&'  reduce 74
	tGE  reduce 74
	tLE  reduce 74
	tEQ  reduce 74
	tNE  reduce 74
	'>'  reduce 74
	'<'  reduce 74
	'+'  reduce 74
	'-'  reduce 74
	'*'  reduce 74
	'/'  reduce 74
	'%'  reduce 74
	','  reduce 74
	'!'  reduce 74
	'?'  reduce 74


state 45
	type : tSTRING .  (26)
	literal : tSTRING .  (72)

	tID  reduce 26
	tEND  reduce 72
	'|'  reduce 72
	'&'  reduce 72
	tGE  reduce 72
	tLE  reduce 72
	tEQ  reduce 72
	tNE  reduce 72
	'>'  reduce 72
	'<'  reduce 72
	'+'  reduce 72
	'-'  reduce 72
	'*'  reduce 72
	'/'  reduce 72
	'%'  reduce 72
	'!'  reduce 72


state 46
	stmt : tREPEAT . '(' expr ',' expr ',' expr ')' stmt  (46)
	stmt : tREPEAT . '(' ',' expr ',' expr ')' stmt  (47)

	'('  shift 70
	.  error


state 47
	stmt : tIF . '(' expr ')' stmt  (44)
	stmt : tIF . '(' expr ')' stmt tELSE stmt  (45)

	'('  shift 71
	.  error


state 48
	stmt : tNEXT . tEND  (41)
	stmt : tNEXT . tINTEGER tEND  (42)

	tINTEGER  shift 72
	tEND  shift 73
	.  error


state 49
	stmt : tSTOP . tEND  (39)
	stmt : tSTOP . tINTEGER tEND  (40)

	tINTEGER  shift 74
	tEND  shift 75
	.  error


state 50
	stmt : tRETURN . tEND  (48)

	tEND  shift 76
	.  error


state 51
	expr : '(' . expr ')'  (68)

	tINTEGER  shift 31
	tID  shift 44
	tSTRING  shift 32
	tNOOB  shift 33
	'('  shift 51
	'~'  shift 52
	'+'  shift 53
	'-'  shift 54
	.  error

	expr  goto 77
	literal  goto 60
	f_call  goto 61
	lval  goto 62


state 52
	expr : '~' . expr  (51)

	tINTEGER  shift 31
	tID  shift 44
	tSTRING  shift 32
	tNOOB  shift 33
	'('  shift 51
	'~'  shift 52
	'+'  shift 53
	'-'  shift 54
	.  error

	expr  goto 78
	literal  goto 60
	f_call  goto 61
	lval  goto 62


state 53
	expr : '+' . expr  (49)

	tINTEGER  shift 31
	tID  shift 44
	tSTRING  shift 32
	tNOOB  shift 33
	'('  shift 51
	'~'  shift 52
	'+'  shift 53
	'-'  shift 54
	.  error

	expr  goto 79
	literal  goto 60
	f_call  goto 61
	lval  goto 62


state 54
	expr : '-' . expr  (50)

	tINTEGER  shift 31
	tID  shift 44
	tSTRING  shift 32
	tNOOB  shift 33
	'('  shift 51
	'~'  shift 52
	'+'  shift 53
	'-'  shift 54
	.  error

	expr  goto 80
	literal  goto 60
	f_call  goto 61
	lval  goto 62


state 55
	body : '{' '}' .  (34)

	.  reduce 34


state 56
	stmts : stmt .  (35)

	.  reduce 35


state 57
	decs : decs . dec  (3)
	body : '{' decs . stmts '}'  (31)
	body : '{' decs . '}'  (32)

	tINTEGER  shift 31
	tID  shift 44
	tSTRING  shift 45
	tREPEAT  shift 46
	tIF  shift 47
	tNEXT  shift 48
	tSTOP  shift 49
	tRETURN  shift 50
	tNOOB  shift 33
	tVOID  shift 2
	tINT  shift 3
	'('  shift 51
	'~'  shift 52
	'{'  shift 35
	'+'  shift 53
	'-'  shift 54
	'*'  shift 4
	'}'  shift 81
	.  error

	stmt  goto 56
	dec  goto 16
	v_dec  goto 7
	f_dec  goto 8
	f_def  goto 9
	stmts  goto 82
	expr  goto 59
	literal  goto 60
	f_call  goto 61
	lval  goto 62
	body  goto 63
	type  goto 11


state 58
	body : '{' stmts . '}'  (33)
	stmts : stmts . stmt  (36)

	tINTEGER  shift 31
	tID  shift 44
	tSTRING  shift 32
	tREPEAT  shift 46
	tIF  shift 47
	tNEXT  shift 48
	tSTOP  shift 49
	tRETURN  shift 50
	tNOOB  shift 33
	'('  shift 51
	'~'  shift 52
	'{'  shift 35
	'+'  shift 53
	'-'  shift 54
	'}'  shift 83
	.  error

	stmt  goto 84
	expr  goto 59
	literal  goto 60
	f_call  goto 61
	lval  goto 62
	body  goto 63


state 59
	stmt : expr . tEND  (37)
	stmt : expr . '!'  (38)
	expr : expr . '+' expr  (52)
	expr : expr . '-' expr  (53)
	expr : expr . '*' expr  (54)
	expr : expr . '/' expr  (55)
	expr : expr . '%' expr  (56)
	expr : expr . '<' expr  (57)
	expr : expr . '>' expr  (58)
	expr : expr . tGE expr  (59)
	expr : expr . tLE expr  (60)
	expr : expr . tNE expr  (61)
	expr : expr . tEQ expr  (62)
	expr : expr . '|' expr  (63)
	expr : expr . '&' expr  (64)

	tEND  shift 85
	'|'  shift 86
	'&'  shift 87
	tGE  shift 88
	tLE  shift 89
	tEQ  shift 90
	tNE  shift 91
	'>'  shift 92
	'<'  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	'%'  shift 98
	'!'  shift 99
	.  error


state 60
	expr : literal .  (69)

	.  reduce 69


state 61
	expr : f_call .  (70)

	.  reduce 70


state 62
	expr : lval . '?'  (65)
	expr : lval .  (66)
	expr : lval . '=' expr  (67)

	'='  shift 100
	'?'  shift 101
	tEND  reduce 66
	')'  reduce 66
	']'  reduce 66
	'|'  reduce 66
	'&'  reduce 66
	tGE  reduce 66
	tLE  reduce 66
	tEQ  reduce 66
	tNE  reduce 66
	'>'  reduce 66
	'<'  reduce 66
	'+'  reduce 66
	'-'  reduce 66
	'*'  reduce 66
	'/'  reduce 66
	'%'  reduce 66
	','  reduce 66
	'!'  reduce 66


state 63
	stmt : body .  (43)

	.  reduce 43


state 64
	f_def : tVOID tID '(' vars ')' body .  (18)

	.  reduce 18


state 65
	vars : vars ',' type . tID  (30)

	tID  shift 102
	.  error


state 66
	f_def : '*' tID '(' vars ')' body .  (19)

	.  reduce 19


state 67
	f_def : type tID '(' vars ')' body .  (17)

	.  reduce 17


state 68
	f_call : tID '(' . ')'  (23)
	f_call : tID '(' . arg_call ')'  (24)

	tINTEGER  shift 31
	tID  shift 44
	tSTRING  shift 32
	tNOOB  shift 33
	'('  shift 51
	')'  shift 103
	'~'  shift 52
	'+'  shift 53
	'-'  shift 54
	.  error

	arg_call  goto 104
	expr  goto 105
	literal  goto 60
	f_call  goto 61
	lval  goto 62


state 69
	lval : tID '[' . expr ']'  (75)

	tINTEGER  shift 31
	tID  shift 44
	tSTRING  shift 32
	tNOOB  shift 33
	'('  shift 51
	'~'  shift 52
	'+'  shift 53
	'-'  shift 54
	.  error

	expr  goto 106
	literal  goto 60
	f_call  goto 61
	lval  goto 62


state 70
	stmt : tREPEAT '(' . expr ',' expr ',' expr ')' stmt  (46)
	stmt : tREPEAT '(' . ',' expr ',' expr ')' stmt  (47)

	tINTEGER  shift 31
	tID  shift 44
	tSTRING  shift 32
	tNOOB  shift 33
	'('  shift 51
	'~'  shift 52
	'+'  shift 53
	'-'  shift 54
	','  shift 107
	.  error

	expr  goto 108
	literal  goto 60
	f_call  goto 61
	lval  goto 62


state 71
	stmt : tIF '(' . expr ')' stmt  (44)
	stmt : tIF '(' . expr ')' stmt tELSE stmt  (45)

	tINTEGER  shift 31
	tID  shift 44
	tSTRING  shift 32
	tNOOB  shift 33
	'('  shift 51
	'~'  shift 52
	'+'  shift 53
	'-'  shift 54
	.  error

	expr  goto 109
	literal  goto 60
	f_call  goto 61
	lval  goto 62


state 72
	stmt : tNEXT tINTEGER . tEND  (42)

	tEND  shift 110
	.  error


state 73
	stmt : tNEXT tEND .  (41)

	.  reduce 41


state 74
	stmt : tSTOP tINTEGER . tEND  (40)

	tEND  shift 111
	.  error


state 75
	stmt : tSTOP tEND .  (39)

	.  reduce 39


state 76
	stmt : tRETURN tEND .  (48)

	.  reduce 48


state 77
	expr : expr . '+' expr  (52)
	expr : expr . '-' expr  (53)
	expr : expr . '*' expr  (54)
	expr : expr . '/' expr  (55)
	expr : expr . '%' expr  (56)
	expr : expr . '<' expr  (57)
	expr : expr . '>' expr  (58)
	expr : expr . tGE expr  (59)
	expr : expr . tLE expr  (60)
	expr : expr . tNE expr  (61)
	expr : expr . tEQ expr  (62)
	expr : expr . '|' expr  (63)
	expr : expr . '&' expr  (64)
	expr : '(' expr . ')'  (68)

	')'  shift 112
	'|'  shift 86
	'&'  shift 87
	tGE  shift 88
	tLE  shift 89
	tEQ  shift 90
	tNE  shift 91
	'>'  shift 92
	'<'  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	'%'  shift 98
	.  error


state 78
	expr : '~' expr .  (51)
	expr : expr . '+' expr  (52)
	expr : expr . '-' expr  (53)
	expr : expr . '*' expr  (54)
	expr : expr . '/' expr  (55)
	expr : expr . '%' expr  (56)
	expr : expr . '<' expr  (57)
	expr : expr . '>' expr  (58)
	expr : expr . tGE expr  (59)
	expr : expr . tLE expr  (60)
	expr : expr . tNE expr  (61)
	expr : expr . tEQ expr  (62)
	expr : expr . '|' expr  (63)
	expr : expr . '&' expr  (64)

	.  reduce 51


state 79
	expr : '+' expr .  (49)
	expr : expr . '+' expr  (52)
	expr : expr . '-' expr  (53)
	expr : expr . '*' expr  (54)
	expr : expr . '/' expr  (55)
	expr : expr . '%' expr  (56)
	expr : expr . '<' expr  (57)
	expr : expr . '>' expr  (58)
	expr : expr . tGE expr  (59)
	expr : expr . tLE expr  (60)
	expr : expr . tNE expr  (61)
	expr : expr . tEQ expr  (62)
	expr : expr . '|' expr  (63)
	expr : expr . '&' expr  (64)

	.  reduce 49


state 80
	expr : '-' expr .  (50)
	expr : expr . '+' expr  (52)
	expr : expr . '-' expr  (53)
	expr : expr . '*' expr  (54)
	expr : expr . '/' expr  (55)
	expr : expr . '%' expr  (56)
	expr : expr . '<' expr  (57)
	expr : expr . '>' expr  (58)
	expr : expr . tGE expr  (59)
	expr : expr . tLE expr  (60)
	expr : expr . tNE expr  (61)
	expr : expr . tEQ expr  (62)
	expr : expr . '|' expr  (63)
	expr : expr . '&' expr  (64)

	.  reduce 50


state 81
	body : '{' decs '}' .  (32)

	.  reduce 32


state 82
	body : '{' decs stmts . '}'  (31)
	stmts : stmts . stmt  (36)

	tINTEGER  shift 31
	tID  shift 44
	tSTRING  shift 32
	tREPEAT  shift 46
	tIF  shift 47
	tNEXT  shift 48
	tSTOP  shift 49
	tRETURN  shift 50
	tNOOB  shift 33
	'('  shift 51
	'~'  shift 52
	'{'  shift 35
	'+'  shift 53
	'-'  shift 54
	'}'  shift 113
	.  error

	stmt  goto 84
	expr  goto 59
	literal  goto 60
	f_call  goto 61
	lval  goto 62
	body  goto 63


state 83
	body : '{' stmts '}' .  (33)

	.  reduce 33


state 84
	stmts : stmts stmt .  (36)

	.  reduce 36


state 85
	stmt : expr tEND .  (37)

	.  reduce 37


state 86
	expr : expr '|' . expr  (63)

	tINTEGER  shift 31
	tID  shift 44
	tSTRING  shift 32
	tNOOB  shift 33
	'('  shift 51
	'~'  shift 52
	'+'  shift 53
	'-'  shift 54
	.  error

	expr  goto 114
	literal  goto 60
	f_call  goto 61
	lval  goto 62


state 87
	expr : expr '&' . expr  (64)

	tINTEGER  shift 31
	tID  shift 44
	tSTRING  shift 32
	tNOOB  shift 33
	'('  shift 51
	'~'  shift 52
	'+'  shift 53
	'-'  shift 54
	.  error

	expr  goto 115
	literal  goto 60
	f_call  goto 61
	lval  goto 62


state 88
	expr : expr tGE . expr  (59)

	tINTEGER  shift 31
	tID  shift 44
	tSTRING  shift 32
	tNOOB  shift 33
	'('  shift 51
	'~'  shift 52
	'+'  shift 53
	'-'  shift 54
	.  error

	expr  goto 116
	literal  goto 60
	f_call  goto 61
	lval  goto 62


state 89
	expr : expr tLE . expr  (60)
